[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metrictrace-gym"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for ESG sustainability auditing."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "openai>=1.6.0"
]

[project.scripts]
server = "server.app:main"

[tool.pyright]
include = ["."]
extraPaths = ["."]

[tool.setuptools.packages.find]
include = ["server"]
